# raiLPminerExperimentation

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  analysis.ipynb  constraint_occurrence_percentage_allpapers.xlsx  constraint_occurrence_percentage_paper.xlsx  pyproject.toml  raiLPminer_submitted.ipynb  raiLPminer_submitted_backup.ipynb  requirements.txt
.github/workflows/: ci.yml
corpus/: STATUS.md  SURVEYS.md  candidates.json  candidates.md  manifest.json  prisma.html  prisma.json  prisma.md  prisma_macros.tex  prisma_yield.html  snowball_candidates.json  snowball_candidates.md
corpus/dossiers/: 10.1002_j.2051-5545.2009.tb00245.x.json  10.1002_j.2051-5545.2009.tb00245.x.md  10.1002_net.20379.json  10.1002_net.20379.md  10.1007_s00170-010-2932-8.json  10.1007_s00170-010-2932-8.md  10.1007_s10951-017-0526-0.json  10.1007_s10951-017-0526-0.md  10.1007_s12469-015-0108-5.json  10.1007_s12469-015-0108-5.md  10.1016_0166-218x_95_00073-z.json  10.1016_0166-218x_95_00073-z.md  10.1016_0191-2615_96_00005-7.json  10.1016_0191-2615_96_00005-7.md  10.1016_0305-0548_95_00032-1.json  10.1016_0305-0548_95_00032-1.md  10.1016_0360-8352_96_00012-5.json  10.1016_0360-8352_96_00012-5.md  10.1016_b978-0-323-85195-4.00033-0.json  10.1016_b978-0-323-85195-4.00033-0.md  10.1016_j.aej.2025.03.003.json  10.1016_j.aej.2025.03.003.md  10.1016_j.apm.2013.07.023.json  10.1016_j.apm.2013.07.023.md  10.1016_j.apm.2015.05.008.json  10.1016_j.apm.2015.05.008.md  10.1016_j.apm.2015.06.031.json  10.1016_j.apm.2015.06.031.md  10.1016_j.apm.2016.06.040.json  10.1016_j.apm.2016.06.040.md  10.1016_j.apm.2017.07.030.json  10.1016_j.apm.2017.07.030.md  10.1016_j.apm.2025.116670.json  10.1016_j.apm.2025.116670.md  10.1016_j.asoc.2011.08.026.json  10.1016_j.asoc.2011.08.026.md  10.1016_j.automatica.2004.02.021.json  10.1016_j.automatica.2004.02.021.md  10.1016_j.cie.2008.07.021.json  10.1016_j.cie.2008.07.021.md  (+532 more)
corpus/formulations/: assignment.json  lp_1_1_fixed_sequence.json  lp_1_5_soft_regularity.json  mip_2_1_big_m.json  mip_2_4_time_indexed.json  mip_2_8_pesp.json  multi_obj_lateness_energy.json  objective_abs_deviation.json  objective_lex_priority.json  pesp_solvable.json
corpus/instances/: assignment_4x4.json  bigm_ordering_4.json  fixed_sequence_4.json  pesp_2events.json  time_indexed_4x4.json
corpus/provenance/: assignment.json  lp_1_1_fixed_sequence.json  lp_1_5_soft_regularity.json  mip_2_1_big_m.json  mip_2_4_time_indexed.json  mip_2_8_pesp.json  multi_obj_lateness_energy.json  objective_abs_deviation.json  objective_lex_priority.json  pesp_solvable.json
corpusbuilder/: __init__.py  __main__.py  _discover.py  arxiv.py  cli.py  config.py  dossier.py  elsevier.py  mathml.py  openalex.py  prisma.py  review_view.py  snowball.py
corpusbuilder/_mathml2latex/: convert.js  package-lock.json  package.json
docs/: STACK.md
docs/adr/: 0001-determinism-boundary-acquisition-vs-pipeline.md  0002-tiered-formula-extraction-ladder.md  0003-socks-tunnel-for-entitled-elsevier-fulltext.md  0004-prisma-tally-as-versioned-corpus-artifact.md
examples/: dry_run.py  dry_run_results.csv  mock_milps.py
inputs/: problem_1.txt  problem_2.txt  problem_3.txt
legacy/: raiLPminer_submitted.ipynb  raiLPminer_submitted_backup.ipynb
railpminer/: __init__.py  __main__.py  _lp2graph.py  cli.py  clustering.py  config.py  corpus.py  dataset.py  instance_contract.py  labeling.py  pipeline.py  taxonomy_export.py  validation.py
railpminer/analysis/: __init__.py  constraints.py  hypothesis.py  (+8 more)
tests/: conftest.py  test_corpus.py  test_corpusbuilder.py  test_labeling.py  test_pipeline.py  test_validation.py
(+26 files in other folders)
