[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "railpminer"
version = "1.0.0"
description = "Reproducible LP-mining experiment harness for 'LP Mining with LP2Graph'."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jörn Maurischat", email = "joern.maurischat@tu-dresden.de" }]
keywords = ["LP", "MILP", "mining", "taxonomy", "railway", "rescheduling", "optimization"]

# lp2graph is the core method library. It is listed here so an installed
# environment is complete; during local development it is commonly a sibling
# checkout used via PYTHONPATH, which railpminer auto-detects.
dependencies = [
    "lp2graph[mining,solver]>=0.3",
]

[project.optional-dependencies]
notebooks = ["pandas", "matplotlib", "plotly", "jupyter"]
dev = ["pytest>=8.0", "ruff>=0.15.12,<0.16", "mypy"]
# corpusbuilder: corpus acquisition (OpenAlex/arXiv/Elsevier ingest, dossiers).
# Elsevier full-text MathML->LaTeX also needs Node + `npm install` in
# corpusbuilder/_mathml2latex. PySocks enables routing through an SSH SOCKS tunnel.
corpus = ["requests>=2.31", "python-dotenv>=1.0", "lxml>=5.0", "PySocks>=1.7"]

[project.scripts]
railpminer = "railpminer.cli:main"
corpusbuilder = "corpusbuilder.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["railpminer", "corpusbuilder"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    # pulp 3.x emits deprecation warnings from inside lp2graph's solver; not ours.
    "ignore::DeprecationWarning:pulp",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["."]

[tool.ruff.lint]
# Shared convention (see ~/.claude/quality/STYLE.md §1). RUF001-003 are ignored
# because railway problem statements and OR notation carry intentional Unicode
# (en-dash "S1–S2", minus "max(0, arrival − due)") in docstrings/fixtures that
# must not be ASCII-mangled (STYLE.md §6).
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "B008", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.isort]
known-first-party = ["railpminer", "corpusbuilder"]
